# ChangeLog for mail-client/mutt
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.133 2009/06/19 08:05:39 grobian Exp $

  19 Jun 2009; Fabian Groffen <grobian@gentoo.org> mutt-1.5.19-r1.ebuild:
  Avoid QA warning about --enable-{compressed,nntp} when USE=sidebar

  19 Jun 2009; Fabian Groffen <grobian@gentoo.org>
  files/mutt-1.5.19-mutt-gnutls-7d0583e0315d-0b13183e40e0.patch:
  Remove mutt_read_line hunk from ssl_gnutls patch, thanks to Martin Jansa in
  bug #274603

  18 Jun 2009; Fabian Groffen <grobian@gentoo.org>
  files/mutt-1.5.19-mutt_ssl-3af7e8af1983-dc9ec900c657.patch:
  Update patch to include parts that were non-local to the ssl-files.
  Unfortunately the fix is non-straight-forward, and includes a lot of other
  changesets, causing this to happen. Should fix bug #274603.

*mutt-1.5.19-r1 (18 Jun 2009)

  18 Jun 2009; Fabian Groffen <grobian@gentoo.org>
  +files/mutt-1.5.19-mutt-gnutls-7d0583e0315d-0b13183e40e0.patch,
  +files/mutt-1.5.19-mutt_ssl-3af7e8af1983-dc9ec900c657.patch,
  -mutt-1.5.19.ebuild, +mutt-1.5.19-r1.ebuild:
  Revision bump for CVE-2009-1390, add related patches

  09 Jun 2009; Fabian Groffen <grobian@gentoo.org>
  +files/mutt-1.5.19-libgnutls-test-15c662a95b91.patch, mutt-1.5.19.ebuild:
  Add patch from upstream to fix libgnutls detection for the latest version of
  the latter library. Bug #268456

  28 May 2009; Fabian Groffen <grobian@gentoo.org> -mutt-1.5.11-r2.ebuild,
  -mutt-1.5.12.ebuild, -mutt-1.5.13.ebuild, -mutt-1.5.13-r1.ebuild,
  mutt-1.5.19.ebuild:
  Remove old. Update sidebar patch to fix 'wrong new mail notifications'
  (http://dev.mutt.org/trac/ticket/3204#comment:2)

  21 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing ferdy as a maintainer since he was retired.

  11 Mar 2009; Fabian Groffen <grobian@gentoo.org> mutt-1.5.16.ebuild,
  mutt-1.5.19.ebuild: