@@ -12,10 +12,6 @@ AUX mutt-1.5.19-libgnutls-test-15c662a95b91.patch 9187 RMD160 b5d981c5aeb66f9fc1
 AUX mutt-1.5.19-mutt-gnutls-7d0583e0315d-0b13183e40e0.patch 12414 RMD160 6759b26ee028fc9d5a0f5d6b7d56fd4c1c879a04 SHA1 819146a1650035ee2a9016f01f0e2d11b8c11896 SHA256 92033adfb057818a7dcae8b02b91df8a62e7d52c339268caa4a38149ac28bc45
 AUX mutt-1.5.19-mutt_ssl-3af7e8af1983-dc9ec900c657.patch 6968 RMD160 ea63c5149d78d2790bfbfbb9a5d2499e179c8ae1 SHA1 d23cab55003763d79475ef4eb95c10504dad323f SHA256 54da63a9ce41c3704a3b96288de7b8d24ef1305a9b27306c8178e900a81f196b
 AUX slang.patch 493 RMD160 16dcedee86fe91ecac48ec5be8a6f67798ef7ac0 SHA1 f913e8c717f76186b0edc8856bf02a167d540c70 SHA256 040c8b63b2d805dae800fa9b1826d158b7104641339cee9a404985616b3502c7
-DIST mutt-1.5.13-gentoo-patches.tar.bz2 53418 RMD160 67274bef651c1c78d1e6878d8bb17316abf9d30e SHA1 95819031d9b14914c04ebd36e3ee004b564b942c SHA256 b0a8737ab8ec42b5f071eb08356a2572c49f98c73c3bf42396fd481c4650ef1d
-DIST mutt-1.5.13.tar.gz 3442681 RMD160 9327b7f928aad78a20c2395629113ac2519bb945 SHA1 6d5b88d33e1727bf0342c31f06d55d7a3d2d4e0a SHA256 e0481690c0caf23b5c88359b2dbac70308f8f138663e8fee482b163562fe8da9
-DIST mutt-1.5.14-gentoo-patches.tar.bz2 53898 RMD160 584cdf88e3fd0fea0a672ef5373bee0b95b0623f SHA1 6308bd600ac21ab19f1a5a0f1a624333a94cc6e0 SHA256 e71f0a6c2c62bca41280e64b2b4687ab9c468e4151d3ba3082125710a487a2f9
-DIST mutt-1.5.14.tar.gz 3441678 RMD160 ed4eeaf75d37757ed5b370e9763b6f8524df5ca7 SHA1 7be098c13302fab8a954095d17a9a64e1e1519c1 SHA256 9dbee28bd48a0f1779ba3b00f98dda74a3f629e8109f1842616d48b85013946a
 DIST mutt-1.5.15-gentoo-patches-r2.tar.bz2 65582 RMD160 c370adb2aaa1ddbfb6fba0b7bb3318e9abeed625 SHA1 2ef0e193d963d52395df6d89281df7c3ec36c8bc SHA256 7b16fb3db479d4d112db3f383e28b4680fd3c435e074b11dee640676039d8987
 DIST mutt-1.5.15.tar.gz 3517899 RMD160 0cc084d2fcdabc0bc41632fcff90703c206de3db SHA1 1adabf6e07e099bb664c83e3c0100bbbdfec7a9a SHA256 03fa1f45d4743cd395b634d19aebbc2c1918cf6b683e0af51076ccc79f643a9a
 DIST mutt-1.5.16-gentoo-patches-r1.tar.bz2 58021 RMD160 bff5f1c5f0053635419eba6e46a3b9f729efe162 SHA1 68641237e7c3398a133406457340c363d87a92f1 SHA256 2bcee97b6dbb0cae997b6a1bf640520e719aa3c15ce4de67f2e5779a830d4cbd
@@ -24,10 +20,8 @@ DIST mutt-1.5.19-gentoo-patches.tar.bz2 62837 RMD160 6f0eb14f7e06440608ffdb73b23
 DIST mutt-1.5.19.tar.gz 3558746 RMD160 dcb8d027593bfccd62eb7aba338007bce3c7e22e SHA1 96e4cc1e1419ba816fcc19d77255978e62c20793 SHA256 b160baedf2676a4c2c1a5c74049e2c63f00fccff43ee2594367087a08bfd63c8
 DIST patch-1.5.16.sidebar.20070704.txt 51103 RMD160 a91a1eefe48c15a048231a632fe285cb2360f365 SHA1 0284a09dfa000d279a0f87c9a0a296f473d4509b SHA256 49123e14bebd33d0e8c7733cab319f3e5bfa591d5f5d74a3dd8964b44bf34ae7
 DIST patch-1.5.19.sidebar.20090522.txt 52307 RMD160 116451d59aa746644f269f8c028484360c84e342 SHA1 056c394657c78e054909dcfde0692007cea33fe3 SHA256 64b2282aac88a3374bb48a9a07b6374443fe3c8f5905def9ac3cdc26d9f8355a
-EBUILD mutt-1.5.13-r2.ebuild 4410 RMD160 35bd57d44d7bd67f35a3e343a5a7090a08977008 SHA1 a6c502184477f9c178b22e617469d1323f68bb5e SHA256 1fcf49cf2e79eee8420221729417acc27725a33ea92334f93c192cf2ec05cd92
-EBUILD mutt-1.5.14.ebuild 4477 RMD160 854063ac3471204336557b95f2f0b84db782e1a7 SHA1 48f12bd49d495620870f39e80a295d6c009a609f SHA256 cc27d01f1d3d727b37c9b9dad92fff1afd9600301238d195cbcb69d47244bb29
 EBUILD mutt-1.5.15-r2.ebuild 4528 RMD160 2359d39b6d5758d977b1cbfce4c320dc0abb0ed7 SHA1 9a34328905989c05c7ebc5892c0e8151433897b0 SHA256 37c613bcdc54cef3d93b013c6cb792deb2be3ca2de85765a937323bae5041264
 EBUILD mutt-1.5.16.ebuild 4989 RMD160 2a9ae3ece8f56692e0077b7b3940e607c79f2a14 SHA1 a79646fbfce1e85ecc2f8aaa4728e3c7303185f0 SHA256 55a70c2bb8f144549e6a12a4ba6bcb8796202d4f7be25fb809fefa2848615368
 EBUILD mutt-1.5.19-r1.ebuild 5933 RMD160 3317bb5ee6c7d076c141fc1dc4998116872a32f8 SHA1 c9786de58bfa87b6ed392fb6190cc0bf69df8464 SHA256 d5c91dc2f7c620a36f690b56560ba8f5122b21c65259310366e245d3a660a692
-MISC ChangeLog 29898 RMD160 9117c96a4f565fb36352d1ed1ee880b699e5950e SHA1 5f2dc0f67fe549f6f5bfa09f2a68ab36107885a8 SHA256 a1c8812b8a8a3bf021cb9e01e3b2999364455f0de17157a8df3679b47b5d45c8
+MISC ChangeLog 30008 RMD160 d89809e8a50b7052567e8867bbe6365c6e03d9ba SHA1 a9fe00fd77f4e27a4afc5619401ddc6be321d122 SHA256 a37c593bb19a3da5b9ce473eeaf0fb6be20ff1c349fb58aac2f3abed2563d2c6
 MISC metadata.xml 631 RMD160 10c1955ddab3675eaf66cefb8b048f63c3cfdada SHA1 2bf05cda645721d9eec36475e7961459d2986351 SHA256 cb99c48a1a6bacbf5d331b42a1803f6526f4805ed4abc730ce6606a9786bd9a7
