@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mutt
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.133 2009/06/19 08:05:39 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.134 2009/06/20 10:34:58 grobian Exp $
+
+  20 Jun 2009; Fabian Groffen <grobian@gentoo.org> -mutt-1.5.13-r2.ebuild,
+  -mutt-1.5.14.ebuild:
+  Drop old
 
   19 Jun 2009; Fabian Groffen <grobian@gentoo.org> mutt-1.5.19-r1.ebuild:
   Avoid QA warning about --enable-{compressed,nntp} when USE=sidebar
